2004-04-21  Chris Kelly <ckdake@users.sf.net> 1.4.4-cvs-b48

	* Bugfix: #938293 - Config wizard now says "All tested files up-to-date."
	  when the number of tested files is 0. 

2004-04-21  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b47

	* Fix: If an album's highlight flag is mistakenly set, but there is no
	  highlight, the album upgrade process fails with PHP errors about deref'ing a
	  non-object. This validates that getHighlightedItem returns with valid
	  data.

2004-04-21  Chris Kelly <ckdake@users.sf.net> 1.4.4-cvs-b46

	* Bugfix: #938387 - Added missing class attributes

2004-04-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b45

	* Fix: Moving to ROOT was broken in -b34 - added fix.
	  Unrelated to 
	  http://gallery.menalto.com/index.php?name=PNphpBB2&file=viewtopic&p=71387

2004-04-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b44

	* Change: Add Config Wiz. option to allow default slideshow mode
	  (Free free to revise text, if you so desire)

2004-04-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b43

	* Change: Increase the size of the <textarea> in edit_field.php
	  This mitigates patch 934454, but it does not apply the conditional
	  formatting.  This change will apply no matter what field name is
	  being edited.

2004-04-18 Don Willingham <donwillingham@users.sf.net> 1.4.4-cvs-b42

	* Bugfix: Take the floor() of $wmAlignX and $wmAlignY in case they
		are not whole numbers.

2004-04-18 Don Willingham <donwillingham@users.sf.net> 1.4.4-cvs-b41

	* Bugfix: Fix showOwner to return user name if full name isn't available.

2004-04-17 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b40

	* New: Possibility to show Owner in different ways. RFE #936003 .

2004-04-16 Chris Kelly <ckdake@users.sf.net> 1.4.4-cvs-b39

	* Bugfix: added dirname(__FILE__) and $gallery->app->photoAlbumURL
		in the appropriate places so that the java applets work
		properly in embedded environments.  Thanks to Jay Rossiter